# buttersnap

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs
src/lib/: error.rs  lib.rs  path.rs  subvolume.rs
tests/lib/: lib.rs  path_tests.rs
tests/mock_filesystem/: lib.rs
