[package]
name = "buttersnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "buttersnap"
path = "src/lib/lib.rs"

[[bin]]
name = "buttersnap"
path = "src/bin/bin.rs"

[[test]]
name = "buttersnap-lib-test"
path = "tests/lib/lib.rs"

[[test]]
name = "buttersnap-bin-test"
path = "tests/bin/bin.rs"

[[test]]
name = "buttersnap-mock-filesystem"
path = "tests/mock_filesystem/lib.rs"

[dependencies]
bitflags = "1.3.2"
block-utils = "0.10.8"
derive_builder = { version = "0.12.0", features = ["clippy"] }
enum_dispatch = "0.3.11"
enumflags2 = { version = "0.7.5", features = ["std"] }
fields-iter = "0.0.3"
genawaiter = "0.99.1"
itertools = "0.10.5"
libbtrfsutil = "0.5.1"
libbtrfsutil-sys = "0.1.0"
macro_rules_attribute = "0.1.3"
proc-macro-regex = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
thiserror = "1.0.38"
type-rules = { version = "0.2.3", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "macro-diagnostics", "fast-rng"] }

[dev-dependencies]
filesystem = { version = "0.4.4", features = ["mock"] }